# macOS

./: .gitignore  INSTALL  Makefile.am  README.md  configure.ac  fetch
dmg2img/: build
dmg2img/include/: base64.h
dmg2img/src/: adc.c  base64.c  dmg2img.c
downloader/: downloader.py  template.py
downloader/modules/: assets.py  catalogs.py
src/dmg2img/: adc.c  base64.c  dmg2img.c
src/dmg2img/include/: dmg2img.h
src/downloader/: catalogs.py  downloader.py  fetch.py  funcs.py
